@@ -11,10 +11,6 @@ import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Rule;
 import org.junit.Test;
-import org.neo4j.graphdb.Label;
-import org.neo4j.graphdb.Node;
-import org.neo4j.graphdb.Path;
-import org.neo4j.graphdb.Relationship;
 import org.neo4j.graphdb.Result;
 import org.neo4j.test.rule.DbmsRule;
 import org.neo4j.test.rule.ImpermanentDbmsRule;
@@ -24,11 +20,12 @@ import org.testcontainers.containers.MySQLContainer;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static apoc.ApocConfig.APOC_IMPORT_FILE_ENABLED;
 import static apoc.ApocConfig.apocConfig;
 import static apoc.dv.DataVirtualizationCatalogTestUtil.*;
+import static apoc.util.MapUtil.map;
+import static apoc.util.TestUtil.getUrlFileName;
 import static apoc.util.TestUtil.testCall;
 import static apoc.util.TestUtil.testCallEmpty;
 import static apoc.util.TestUtil.testResult;
@@ -61,208 +58,220 @@ public class DataVirtualizationCatalogTest {
 
     @Test
     public void testVirtualizeCSV() {
-        CsvTestResult result = getCsvCommonResult(db);
+        final String url = getUrlFileName("test.csv").toString();
+        getCsvCommonResult(db, url);
 
         final String relType = "LINKED_TO";
-        testCall(db, "MATCH (hook:Hook) WITH hook " +
-                     "CALL apoc.dv.queryAndLink(hook, $relType, $name, $queryParams, $config) yield path " +
-                     "RETURN path ",
-                Map.of("name", result.name(), "queryParams", result.queryParams(), "relType", relType, "config", Map.of("header", true)),
-                (row) -> {
-                    Path path = (Path) row.get("path");
-                    Node node = path.endNode();
-                    assertEquals(result.personName(), node.getProperty("name"));
-                    assertEquals(result.personAge(), node.getProperty("age"));
-                    assertEquals(List.of(Label.label("Person")), node.getLabels());
-
-                    Node hook = path.startNode();
-                    assertEquals(result.hookNodeName(), hook.getProperty("name"));
-                    assertEquals(List.of(Label.label("Hook")), hook.getLabels());
-
-                    Relationship relationship = path.lastRelationship();
-                    assertEquals(hook, relationship.getStartNode());
-                    assertEquals(node, relationship.getEndNode());
-                    assertEquals(relType, relationship.getType().name());
-                });
+        testCall(db, APOC_DV_QUERY_AND_LINK_QUERY,
+                APOC_DV_QUERY_AND_LINK_QUERY_PARAMS,
+//                Map.of("name", result.name(), "queryParams", result.queryParams(), "relType", relType, "config", Map.of("header", true)),
+                DataVirtualizationCatalogTestUtil::assertVirtualizeCSVQueryAndLinkContent);
+//                (row) -> {
+//                    Path path = (Path) row.get("path");
+//                    Node node = path.endNode();
+//                    assertEquals(result.personName(), node.getProperty("name"));
+//                    assertEquals(result.personAge(), node.getProperty("age"));
+//                    assertEquals(List.of(Label.label("Person")), node.getLabels());
+//
+//                    Node hook = path.startNode();
+//                    assertEquals(result.hookNodeName(), hook.getProperty("name"));
+//                    assertEquals(List.of(Label.label("Hook")), hook.getLabels());
+//
+//                    Relationship relationship = path.lastRelationship();
+//                    assertEquals(hook, relationship.getStartNode());
+//                    assertEquals(node, relationship.getEndNode());
+//                    assertEquals(relType, relationship.getType().name());
+//                });
 
     }
-    
+
     @Test
     public void testVirtualizeCSVWithCustomDirectionIN() {
-        CsvTestResult result = getCsvCommonResult(db);
-        
-        final String relType = "LINKED_TO";
-        testCall(db, "MATCH (hook:Hook) WITH hook " +
-                     "CALL apoc.dv.queryAndLink(hook, $relType, $name, $queryParams, $config) yield path " +
-                     "RETURN path ",
-                Map.of("name", result.name(), "queryParams", result.queryParams(), "relType", relType, "config", Map.of("header", true, "direction", "IN")),
-                (row) -> {
-                    Path path = (Path) row.get("path");
-                    Node hook = path.endNode();
-                    assertEquals(result.hookNodeName(), hook.getProperty("name"));
-                    assertEquals(List.of(Label.label("Hook")), hook.getLabels());
-                    Node node = path.startNode();
+        final String url = getUrlFileName("test.csv").toString();
+        getCsvCommonResult(db, url);
 
-                    assertEquals(result.personName(), node.getProperty("name"));
-                    assertEquals(result.personAge(), node.getProperty("age"));
-                    assertEquals(List.of(Label.label("Person")), node.getLabels());
-
-                    Relationship relationship = path.lastRelationship();
-                    assertEquals(node, relationship.getStartNode());
-                    assertEquals(hook, relationship.getEndNode());
-                    assertEquals(relType, relationship.getType().name());
-                });
+        Map<String, Object> config = withDirectionIn(CONFIG_VALUE);
+        testCall(db, APOC_DV_QUERY_AND_LINK_QUERY,
+                map(NAME_KEY, CSV_NAME_VALUE, APOC_DV_QUERY_PARAMS_KEY, APOC_DV_QUERY_PARAMS, RELTYPE_KEY, RELTYPE_VALUE, CONFIG_KEY, config),
+                DataVirtualizationCatalogTestUtil::assertVirtualizeCSVQueryAndLinkContentDirectionIN);
+//                (row) -> {
+//                    Path path = (Path) row.get("path");
+//                    Node hook = path.endNode();
+//                    assertEquals(result.hookNodeName(), hook.getProperty("name"));
+//                    assertEquals(List.of(Label.label("Hook")), hook.getLabels());
+//                    Node node = path.startNode();
+//
+//                    assertEquals(result.personName(), node.getProperty("name"));
+//                    assertEquals(result.personAge(), node.getProperty("age"));
+//                    assertEquals(List.of(Label.label("Person")), node.getLabels());
+//
+//                    Relationship relationship = path.lastRelationship();
+//                    assertEquals(node, relationship.getStartNode());
+//                    assertEquals(hook, relationship.getEndNode());
+//                    assertEquals(relType, relationship.getType().name());
+//                });
 
     }
 
     @Test
     public void testVirtualizeJDBC() {
-        VirtualizeJdbcResult result = getVirtualizeJdbcCommonResult(db, mysql);
-        
-        final String relType = "LINKED_TO_NEW";
-        testCall(db, "MATCH (hook:Hook) WITH hook " +
-                     "CALL apoc.dv.queryAndLink(hook, $relType, $name, $queryParams, $config) yield path " +
-                     "RETURN path ",
-                Map.of("name", result.name(), "queryParams", result.queryParams(), "relType", relType,
-                        "config", Map.of("credentials", Map.of("user", mysql.getUsername(), "password", mysql.getPassword()))),
-                (row) -> {
-                    Path path = (Path) row.get("path");
-                    Node node = path.endNode();
-                    assertEquals(result.country(), node.getProperty("Name"));
-                    assertEquals(result.labels(), node.getLabels());
+        getVirtualizeJdbcCommonResult(db, mysql, APOC_DV_ADD_QUERY, APOC_DV_QUERY_WITH_PARAM, APOC_DV_QUERY, db);
 
-                    Node hook = path.startNode();
-                    assertEquals(result.hookNodeName(), hook.getProperty("name"));
-                    assertEquals(List.of(Label.label("Hook")), hook.getLabels());
-
-                    Relationship relationship = path.lastRelationship();
-                    assertEquals(hook, relationship.getStartNode());
-                    assertEquals(node, relationship.getEndNode());
-                    assertEquals(relType, relationship.getType().name());
-                });
+        testCall(db, APOC_DV_QUERY_AND_LINK_QUERY,
+                Map.of(NAME_KEY, JDBC_NAME, APOC_DV_QUERY_PARAMS_KEY, VIRTUALIZE_JDBC_APOC_PARAMS, RELTYPE_KEY, VIRTUALIZE_JDBC_WITH_PARAMS_RELTYPE,
+                        CONFIG_KEY, getJdbcCredentials(mysql)),
+                DataVirtualizationCatalogTestUtil::assertDvQueryAndLinkContent);
+//
+//        final String relType = "LINKED_TO_NEW";
+//        testCall(db, "MATCH (hook:Hook) WITH hook " +
+//                     "CALL apoc.dv.queryAndLink(hook, $relType, $name, $queryParams, $config) yield path " +
+//                     "RETURN path ",
+//                Map.of("name", PERSON_NAME, "queryParams", APOC_DV_QUERY_WITH_PARAM, "relType", relType,
+//                        "config", getJdbcCredentials(mysql)),
+//                DataVirtualizationCatalogTestUtil::assertDvQueryAndLinkContent);
+//                (row) -> {
+//                    Path path = (Path) row.get("path");
+//                    Node node = path.endNode();
+//                    assertEquals(result.country(), node.getProperty("Name"));
+//                    assertEquals(result.labels(), node.getLabels());
+//
+//                    Node hook = path.startNode();
+//                    assertEquals(result.hookNodeName(), hook.getProperty("name"));
+//                    assertEquals(List.of(Label.label("Hook")), hook.getLabels());
+//
+//                    Relationship relationship = path.lastRelationship();
+//                    assertEquals(hook, relationship.getStartNode());
+//                    assertEquals(node, relationship.getEndNode());
+//                    assertEquals(relType, relationship.getType().name());
+//                });
     }
 
     @Test
     public void testVirtualizeJDBCWithCustomDirectionIN() {
-        VirtualizeJdbcResult result = getVirtualizeJdbcCommonResult(db, mysql);
+        getVirtualizeJdbcCommonResult(db, mysql, APOC_DV_ADD_QUERY, APOC_DV_QUERY_WITH_PARAM, APOC_DV_QUERY, db);
 
-        final String relType = "LINKED_TO_NEW";
-        testCall(db, "MATCH (hook:Hook) WITH hook " +
-                     "CALL apoc.dv.queryAndLink(hook, $relType, $name, $queryParams, $config) yield path " +
-                     "RETURN path ",
-                Map.of("name", result.name(), "queryParams", result.queryParams(), "relType", relType,
-                        "config", Map.of(
-                                "credentials", Map.of("user", mysql.getUsername(), "password", mysql.getPassword()),
-                                "direction", "IN"
-                        )),
-                (row) -> {
-                    Path path = (Path) row.get("path");
-                    Node hook = path.endNode();
-                    assertEquals(result.hookNodeName(), hook.getProperty("name"));
-                    assertEquals(List.of(Label.label("Hook")), hook.getLabels());
+        Map<String, Object> config = getJdbcCredentials(mysql);
+        withDirectionIn(config);
 
-                    Node node = path.startNode();
-                    assertEquals(result.country(), node.getProperty("Name"));
-                    assertEquals(result.labels(), node.getLabels());
-
-                    Relationship relationship = path.lastRelationship();
-                    assertEquals(node, relationship.getStartNode());
-                    assertEquals(hook, relationship.getEndNode());
-                    assertEquals(relType, relationship.getType().name());
-                });
+        testCall(db, APOC_DV_QUERY_AND_LINK_QUERY,
+                Map.of(NAME_KEY, JDBC_NAME, APOC_DV_QUERY_PARAMS_KEY, VIRTUALIZE_JDBC_APOC_PARAMS, RELTYPE_KEY, VIRTUALIZE_JDBC_WITH_PARAMS_RELTYPE,
+                        CONFIG_KEY, config),
+                DataVirtualizationCatalogTestUtil::assertDvQueryAndLinkContentDirectionIN);
+        
+//        final String relType = "LINKED_TO_NEW";
+//        testCall(db, "MATCH (hook:Hook) WITH hook " +
+//                     "CALL apoc.dv.queryAndLink(hook, $relType, $name, $queryParams, $config) yield path " +
+//                     "RETURN path ",
+//                Map.of("name", PERSON_NAME, "queryParams", APOC_DV_QUERY_WITH_PARAM, "relType", RELTYPE_VALUE,
+//                        "config", config),
+//                DataVirtualizationCatalogTestUtil::assertDvQueryAndLinkContentDirectionIn);
+//                (row) -> {
+//                    Path path = (Path) row.get("path");
+//                    Node hook = path.endNode();
+//                    assertEquals(result.hookNodeName(), hook.getProperty("name"));
+//                    assertEquals(List.of(Label.label("Hook")), hook.getLabels());
+//
+//                    Node node = path.startNode();
+//                    assertEquals(result.country(), node.getProperty("Name"));
+//                    assertEquals(result.labels(), node.getLabels());
+//
+//                    Relationship relationship = path.lastRelationship();
+//                    assertEquals(node, relationship.getStartNode());
+//                    assertEquals(hook, relationship.getEndNode());
+//                    assertEquals(relType, relationship.getType().name());
+//                });
     }
 
     @Test
     public void testVirtualizeJDBCWithParameterMap() {
-        VirtualizeJdbcWithParameterResult result = getVirtualizeJdbcWithParamsCommonResult(db, mysql);
+        getVirtualizeJdbcWithParamsCommonResult(db, mysql, APOC_DV_ADD_QUERY, db);
 
-        final String relType = "LINKED_TO_NEW";
-        testCall(db, "MATCH (hook:Hook) WITH hook " +
-                        "CALL apoc.dv.queryAndLink(hook, $relType, $name, $queryParams, $config) yield path " +
-                        "RETURN path ",
-                Map.of("name", result.name(), "queryParams", result.queryParams(), "relType", relType,
-                        "config", Map.of("credentials", Map.of("user", mysql.getUsername(), "password", mysql.getPassword()))),
-                (row) -> {
-                    Path path = (Path) row.get("path");
-                    Node node = path.endNode();
-                    assertEquals(result.country(), node.getProperty("Name"));
-                    assertEquals(result.labels(), node.getLabels());
-
-                    Node hook = path.startNode();
-                    assertEquals(result.hookNodeName(), hook.getProperty("name"));
-                    assertEquals(List.of(Label.label("Hook")), hook.getLabels());
-
-                    Relationship relationship = path.lastRelationship();
-                    assertEquals(hook, relationship.getStartNode());
-                    assertEquals(node, relationship.getEndNode());
-                    assertEquals(relType, relationship.getType().name());
-                });
+        testCall(db, APOC_DV_QUERY_AND_LINK_QUERY,
+                Map.of(NAME_KEY, JDBC_NAME, APOC_DV_QUERY_PARAMS_KEY, VIRTUALIZE_JDBC_QUERY_PARAMS, RELTYPE_KEY, VIRTUALIZE_JDBC_WITH_PARAMS_RELTYPE,
+                        CONFIG_KEY, getJdbcCredentials(mysql)),
+                DataVirtualizationCatalogTestUtil::assertDvQueryAndLinkContent);
+//        testCall(db, APOC_DV_QUERY_AND_LINK_QUERY,
+//                Map.of(NAME_KEY, JDBC_NAME, APOC_DV_QUERY_PARAMS_KEY, VIRTUALIZE_JDBC_APOC_PARAMS, RELTYPE_KEY, VIRTUALIZE_JDBC_QUERY_PARAMS,
+//                        CONFIG_KEY, Map.of(
+//                                "credentials", Map.of("user", mysql.getUsername(), "password", mysql.getPassword())
+//                        )),
+                
+//                Map.of("name", result.name(), "queryParams", result.queryParams(), "relType", relType,
+//                        "config", Map.of("credentials", Map.of("user", mysql.getUsername(), "password", mysql.getPassword()))),
+//                DataVirtualizationCatalogTestUtil::assertDvQueryAndLinkContent);
+//                (row) -> {
+//                    Path path = (Path) row.get("path");
+//                    Node node = path.endNode();
+//                    assertEquals(result.country(), node.getProperty("Name"));
+//                    assertEquals(result.labels(), node.getLabels());
+//
+//                    Node hook = path.startNode();
+//                    assertEquals(result.hookNodeName(), hook.getProperty("name"));
+//                    assertEquals(List.of(Label.label("Hook")), hook.getLabels());
+//
+//                    Relationship relationship = path.lastRelationship();
+//                    assertEquals(hook, relationship.getStartNode());
+//                    assertEquals(node, relationship.getEndNode());
+//                    assertEquals(relType, relationship.getType().name());
+//                });
     }
-    
+
 
     @Test
     public void testVirtualizeJDBCWithParameterMapAndDirectionIN() {
-        VirtualizeJdbcWithParameterResult result = getVirtualizeJdbcWithParamsCommonResult(db, mysql);
+        getVirtualizeJdbcWithParamsCommonResult(db, mysql, APOC_DV_ADD_QUERY, db);
 
-        final String relType = "LINKED_TO_NEW";
-        testCall(db, "MATCH (hook:Hook) WITH hook " +
-                     "CALL apoc.dv.queryAndLink(hook, $relType, $name, $queryParams, $config) yield path " +
-                     "RETURN path ",
-                Map.of("name", result.name(), "queryParams", result.queryParams(), "relType", relType,
-                        "config", Map.of("credentials", Map.of("user", mysql.getUsername(), "password", mysql.getPassword()),
-                                "direction", "IN"
-                        )),
-                (row) -> {
-                    Path path = (Path) row.get("path");
-                    Node hook = path.endNode();
-                    assertEquals(result.hookNodeName(), hook.getProperty("name"));
-                    assertEquals(List.of(Label.label("Hook")), hook.getLabels());
-
-                    Node node = path.startNode();
-                    assertEquals(result.country(), node.getProperty("Name"));
-                    assertEquals(result.labels(), node.getLabels());
-
-                    Relationship relationship = path.lastRelationship();
-                    assertEquals(node, relationship.getStartNode());
-                    assertEquals(hook, relationship.getEndNode());
-                    assertEquals(relType, relationship.getType().name());
-                });
+        Map<String, Object> config = map("credentials", getJdbcCredentials(mysql));
+        withDirectionIn(config);
+        testCall(db, APOC_DV_QUERY_AND_LINK_QUERY,
+                Map.of(NAME_KEY, JDBC_NAME, APOC_DV_QUERY_PARAMS_KEY, VIRTUALIZE_JDBC_QUERY_PARAMS, RELTYPE_KEY, VIRTUALIZE_JDBC_WITH_PARAMS_RELTYPE,
+                        CONFIG_KEY, config),
+                DataVirtualizationCatalogTestUtil::assertDvQueryAndLinkContentDirectionIN);
+//
+//        testCall(db, APOC_DV_QUERY_AND_LINK_QUERY,
+//                Map.of(NAME_KEY, JDBC_NAME, APOC_DV_QUERY_PARAMS_KEY, VIRTUALIZE_JDBC_APOC_PARAMS, RELTYPE_KEY, VIRTUALIZE_JDBC_QUERY_PARAMS,
+//                        CONFIG_KEY, Map.of(
+//                                "direction", "IN",
+//                                "credentials", Map.of("user", mysql.getUsername(), "password", mysql.getPassword())
+//                        )),
+////                Map.of("name", result.name(), "queryParams", result.queryParams(), "relType", relType,
+////                        "config", Map.of("credentials", Map.of("user", mysql.getUsername(), "password", mysql.getPassword()),
+////                                "direction", "IN"
+////                        )),
+//                DataVirtualizationCatalogTestUtil::assertDvQueryAndLinkContentDirectionIN);
+//                (row) -> {
+//                    Path path = (Path) row.get("path");
+//                    Node hook = path.endNode();
+//                    assertEquals(result.hookNodeName(), hook.getProperty("name"));
+//                    assertEquals(List.of(Label.label("Hook")), hook.getLabels());
+//
+//                    Node node = path.startNode();
+//                    assertEquals(result.country(), node.getProperty("Name"));
+//                    assertEquals(result.labels(), node.getLabels());
+//
+//                    Relationship relationship = path.lastRelationship();
+//                    assertEquals(node, relationship.getStartNode());
+//                    assertEquals(hook, relationship.getEndNode());
+//                    assertEquals(relType, relationship.getType().name());
+//                });
     }
 
     @Test
     public void testRemove() {
-        String name = "jdbc_vr";
-        String desc = "country details";
-        List<String> labelsAsString = List.of("Country");
-        final String query = "SELECT * FROM country WHERE Name = $name";
-        final String url = mysql.getJdbcUrl() + "?useSSL=false";
-        Map<String, Object> map = Map.of("type", "JDBC",
-                "url", url, "query", query,
-                "desc", desc,
-                "labels", labelsAsString);
+        db.executeTransactionally(APOC_DV_ADD_QUERY,
+                Map.of("name", JDBC_NAME, "map", getVirtualizeJDBCParameterMap(mysql, JDBC_SELECT_QUERY)));
 
-        db.executeTransactionally("CALL apoc.dv.catalog.add($name, $map)",
-                Map.of("name", name, "map", map));
-
-        testCallEmpty(db, "CALL apoc.dv.catalog.remove($name)", Map.of("name", name));
+        testCallEmpty(db, "CALL apoc.dv.catalog.remove($name)", Map.of("name", JDBC_NAME));
     }
 
     @Test
     public void testNameAsKey() {
-        String name = "jdbc_vr";
-        String desc = "country details";
-        List<String> labelsAsString = List.of("Country");
-        final String query = "SELECT * FROM country WHERE Name = $name";
-        final String url = mysql.getJdbcUrl() + "?useSSL=false";
-        Map<String, Object> map = Map.of("type", "JDBC",
-                "url", url, "query", query,
-                "desc", desc,
-                "labels", labelsAsString);
+        Map<String, Object> params = Map.of(
+                NAME_KEY, JDBC_NAME, "map", getVirtualizeJDBCParameterMap(mysql, JDBC_SELECT_QUERY)
+        );
 
-        db.executeTransactionally("CALL apoc.dv.catalog.add($name, $map)",
-                Map.of("name", name, "map", map));
-        db.executeTransactionally("CALL apoc.dv.catalog.add($name, $map)",
-                Map.of("name", name, "map", map));
+        db.executeTransactionally(APOC_DV_ADD_QUERY, params);
+        db.executeTransactionally(APOC_DV_ADD_QUERY, params);
         testResult(db, "CALL apoc.dv.catalog.list()",
                 Map.of(),
                 (result) -> assertEquals(1, result.stream().count()));
@@ -271,18 +280,8 @@ public class DataVirtualizationCatalogTest {
     @Test
     public void testJDBCQueryWithMixedParamsTypes() {
         try {
-            String name = "jdbc_vr";
-            String desc = "country details";
-            List<String> labelsAsString = List.of("Country");
-            final String query = "SELECT * FROM country WHERE Name = $name AND param_with_question_mark = ? ";
-            final String url = mysql.getJdbcUrl() + "?useSSL=false";
-            Map<String, Object> map = Map.of("type", "JDBC",
-                    "url", url, "query", query,
-                    "desc", desc,
-                    "labels", labelsAsString);
-
-            db.executeTransactionally("CALL apoc.dv.catalog.add($name, $map)",
-                    Map.of("name", name, "map", map));
+            db.executeTransactionally(APOC_DV_ADD_QUERY,
+                    Map.of("name", JDBC_NAME, "map", getVirtualizeJDBCParameterMap(mysql, JDBC_SELECT_QUERY_WITH_PARAM)));
             Assert.fail("Exception is expected");
         } catch (Exception e) {
             final Throwable rootCause = ExceptionUtils.getRootCause(e);
@@ -293,31 +292,10 @@ public class DataVirtualizationCatalogTest {
 
     @Test
     public void testVirtualizeJDBCWithDifferentParameterMap() {
-        String name = "jdbc_vr";
-        String desc = "country details";
-        List<Label> labels = List.of(Label.label("Country"));
-        List<String> labelsAsString = List.of("Country");
-        final String query = "SELECT * FROM country WHERE Name = $name AND HeadOfState = $head_of_state AND Code2 = $CODE2";
         final String url = mysql.getJdbcUrl() + "?useSSL=false";
-        Map<String, Object> map = Map.of("type", "JDBC",
-                "url", url, "query", query,
-                "desc", desc,
-                "labels", labelsAsString);
-
-        final List<String> expectedParams = List.of("$name", "$head_of_state", "$CODE2");
-        final List<String> sortedExpectedParams = expectedParams.stream()
-                .sorted()
-                .collect(Collectors.toList());
-        testCall(db, "CALL apoc.dv.catalog.add($name, $map)",
-                Map.of("name", name, "map", map),
-                (row) -> {
-                    assertEquals(name, row.get("name"));
-                    assertEquals(url, row.get("url"));
-                    assertEquals("JDBC", row.get("type"));
-                    assertEquals(labelsAsString, row.get("labels"));
-                    assertEquals(desc , row.get("desc"));
-                    assertEquals(expectedParams, row.get("params"));
-                });
+        testCall(db, APOC_DV_ADD_QUERY,
+                Map.of("name", JDBC_NAME, "map", getVirtualizeJDBCParameterMap(mysql, VIRTUALIZE_JDBC_WITH_PARAMS_QUERY)),
+                (row) -> assertDvCatalogAddOrInstall(row, url));
 
         String country = "Netherlands";
         String code2 = "NL";
@@ -325,9 +303,9 @@ public class DataVirtualizationCatalogTest {
         Map<String, Object> queryParams = Map.of("foo", country, "bar", code2, "baz", headOfState);
 
         try {
-            db.executeTransactionally("CALL apoc.dv.query($name, $queryParams, $config)",
-                    Map.of("name", name, "queryParams", queryParams,
-                            "config", Map.of("credentials", Map.of("user", mysql.getUsername(), "password", mysql.getPassword()))),
+            db.executeTransactionally(APOC_DV_QUERY,
+                    Map.of(NAME_KEY, JDBC_NAME, APOC_DV_QUERY_PARAMS_KEY, queryParams,
+                            CONFIG_KEY, getJdbcCredentials(mysql)),
                     Result::resultAsString);
             Assert.fail("Exception is expected");
         } catch (Exception e) {
@@ -336,8 +314,9 @@ public class DataVirtualizationCatalogTest {
             final List<String> actualParams = queryParams.keySet().stream()
                     .map(s -> "$" + s)
                     .sorted()
-                    .collect(Collectors.toList());
-            assertEquals(String.format("Expected query parameters are %s, actual are %s", sortedExpectedParams, actualParams), rootCause.getMessage());
+                    .toList();
+            assertEquals(String.format("Expected query parameters are %s, actual are %s", EXPECTED_LIST_SORTED, actualParams), rootCause.getMessage());
         }
     }
+  
 }
